fix(alert): reset p margin and i font-style inside shadow DOM
Shadow DOM does not receive the global _reset.scss. Reset margin/padding
on <p> elements and font-style on <i> so browser defaults don't cause
misalignment inside the component's shadow root.

--- a/packages/styles/src/components/_alert.scss
+++ b/packages/styles/src/components/_alert.scss
@@ -20,12 +20,16 @@
   &__icon {
     flex-shrink: 0;
     font-size: fluid(24);
+    font-style: normal;
   }
 
   &__text {
     width: 100%;
 
     p {
+      margin: 0;
+      padding: 0;
+
       &:first-child {
         margin-bottom: fluid(2);
       }
